--- a/index.css
+++ b/index.css
@@ -44,3 +44,9 @@ svg.sim {
     transition: stroke-opacity 0.3s;
     transition: fill 0.3s;
 }
+
+.arc {
+    stroke: black;
+    stroke-width: 1px;
+    fill: none;
+}
