IT WORKS. But I can't make the mirror a solid anymore...

--- a/index.css
+++ b/index.css
@@ -3,8 +3,12 @@ svg.sim {
 }
 
 .mirror {
-    stroke: black;
+    stroke: gray;
     stroke-width: 1;
+}
+
+.hollow {
+    fill: none;
 }
 
 .solid {
