--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ svg.sim {
 
 .ray {
     fill: none;
-    stroke: red;
+    stroke: #e74c3c;
     stroke-width: 1;
     stroke-linecap: round;
     stroke-linejoin: round;
@@ -29,28 +29,27 @@ svg.sim {
 }
 
 .handle {
-    fill: lightcoral;
-    stroke-opacity: 0;
-    fill-opacity: 0.6;
-    stroke-width: 0px;
-    transition: stroke-opacity 0.3s, stroke-width 0.3s, fill 0.3s;
+    fill: #bdc3c7;
+    /* stroke-opacity: 0; */
+    /* fill-opacity: 0.6; */
+    /* stroke-width: 0px; */
+    stroke: black;
+    stroke-opacity: 1;
+    stroke-width: 1px;
+    transition: stroke-width 0.3s;
 }
 
 .handle:hover {
     stroke: black;
     stroke-opacity: 1;
-    stroke-width: 1px;
-    transition: stroke-opacity 0.3s;
+    stroke-width: 2px;
+    transition: stroke-width 0.3s;
 }
 
 .handle:active {
-    fill: rgb(221, 82, 82);
-    fill-opacity: 1;
-    stroke: black;
-    stroke-opacity: 1;
-    stroke-width: 1px;
-    transition: stroke-opacity 0.3s;
-    transition: fill 0.3s;
+    /* fill-opacity: 1; */
+    stroke-width: 2px;
+    transition: stroke-width 0.3s;
 }
 
 .arc {
