--- a/old.css
+++ b/old.css
@@ -2,6 +2,11 @@ svg.sim {
     border: 1px solid black;
     touch-action: none;
     -ms-touch-action: none;
+    background-color:rgb(255, 255, 255);
+}
+
+svg.sim.color {
+    background-color:rgb(0,0,0);
 }
 
 .mirror {
@@ -68,6 +73,12 @@ svg.sim {
     stroke-width: 1;
     stroke-linecap: round;
     stroke-linejoin: round;
+    mix-blend-mode: lighten;
+}
+
+.ray-group {
+    mix-blend-mode: darken;
+    isolation: isolate;
 }
 
 /* .ray:hover {
