--- a/old.css
+++ b/old.css
@@ -5,6 +5,23 @@ svg.sim {
     background-color:rgb(255, 255, 255);
 }
 
+div.row {
+    padding-top: 5em;
+}
+
+p:first-child {
+    padding-top: 3em;
+}
+
+.single-ray:hover > .ray{
+    stroke-width: 2;
+    stroke-opacity: 1 !important;
+}
+
+p:not(:first-child) {
+    text-indent: 3em;
+}
+
 svg.sim.color {
     background-color:rgb(0,0,0);
 }
@@ -51,6 +68,7 @@ svg.sim.color {
 
 .slider-handle {
     fill: rgb(131, 161, 226) !important;
+    fill-opacity: 1 !important;
     stroke: rgb(76, 76, 126) !important;
 }
 
@@ -89,6 +107,7 @@ svg.sim.color {
 .handle {
     fill: #bdc3c7;
     stroke: black;
+    fill-opacity: 0.6;
     stroke-opacity: 1;
     stroke-width: 1px;
     transition: stroke-width 0.3s;
