--- a/old.css
+++ b/old.css
@@ -1,8 +1,14 @@
 svg.sim {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     touch-action: none;
     -ms-touch-action: none;
     background-color:rgb(255, 255, 255);
+}
+
+.border {
+    stroke:black;
+    stroke-width: 1;
+    fill: none;
 }
 
 div.row {
@@ -156,13 +162,12 @@ svg.sim.color {
     text-align: center;
 } */
 
-.container > div:not(:first-child) {
+/* .container > div:not(:first-child) {
     background-color: rgba(238, 238, 238, 0.4);
     padding-left: 1em;
     border: 1px solid black;
     margin-top: 3em;
-    /* box-shadow: 0px 0px 3px 5px rgba(0,0,0,0.3); */
-}
+} */
 
 .section > .columns {
     margin-top: 2em;
@@ -176,4 +181,11 @@ svg.sim.color {
 
 .sim-container {
     text-align: center;
+    /* overflow: scroll; */
 }
+
+/* @media(max-width: 440px){
+    .container {
+        width: 100vw !important;
+    }
+} */
