--- a/old.css
+++ b/old.css
@@ -1,16 +1,23 @@
 svg.sim {
     /* border: 1px solid black; */
-    width: 70%;
+    /* width: 70%; */
     touch-action: none;
     -ms-touch-action: none;
     background-color:rgb(255, 255, 255);
 }
 
-@media (max-width: 550px){
+/* @media (max-width: 550px){
     svg.sim {
         width: 100%;
     }
-}
+} */
+
+/* @media (min-width: 769px){ */
+    svg.sim {
+        width:100%;
+        max-width:390px;
+    }
+/* } */
 
 .border {
     stroke:black;
