--- a/old.css
+++ b/old.css
@@ -6,18 +6,11 @@ svg.sim {
     background-color:rgb(255, 255, 255);
 }
 
-/* @media (max-width: 550px){
-    svg.sim {
-        width: 100%;
-    }
-} */
+svg.sim {
+    width:100%;
+    max-width:400px;
+}
 
-/* @media (min-width: 769px){ */
-    svg.sim {
-        width:100%;
-        max-width:390px;
-    }
-/* } */
 
 .border {
     stroke:black;
@@ -76,9 +69,16 @@ svg.sim.color {
     fill: none;
 }
 
+.darkglass {
+    stroke: rgb(199, 199, 199);
+    fill: rgb(220,220,220);
+    fill-opacity: 0.4;
+    stroke-width: 0.5;
+}
+
 .water {
     stroke: rgb(155, 192, 241);
-    stroke-width: 1;
+    stroke-width: 0.5;
 }
 
 .solid.water {
@@ -88,7 +88,7 @@ svg.sim.color {
 
 .glass {
     stroke: rgb(216, 216, 216);
-    stroke-width: 1;
+    stroke-width: 0.5;
 }
 
 .solid.glass {
