--- a/old.css
+++ b/old.css
@@ -28,10 +28,14 @@ p:first-child {
     padding-top: 3em;
 }
 
-.single-ray:hover > .ray{
+.single-ray:hover > .ray:not(.virtual){
     stroke-width: 2;
     stroke: red;
     /* stroke-opacity: 1 !important; */
+}
+
+.single-ray > .virtual.ray:nth-child(2){
+    stroke: rgb(188, 48, 216) !important;
 }
 
 .explanation > p:not(:first-child) {
