Added some footnotes!

--- a/old.css
+++ b/old.css
@@ -227,3 +227,13 @@ svg.sim.color {
     stroke: gray;
     stroke-width: 0.5;
 }
+
+sup.tooltip {
+    text-decoration: underline;
+}
+
+.tooltip::before {
+    width: 12rem;
+}
+
+
